--- a/index.html
+++ b/index.html
@@ -49,9 +49,53 @@
     </div>
   </div>
   <div id="features" class="offset">
-    
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-auto text-center">
+          <h1>Features</h1>
+          <p>We have the most complete gym facilities.</p>
+        </div>
+      </div>
+      <div class="row justify-content-lg-center">
+        <div class="col-lg-6 text-lg-right">
+          <ul>
+            <li>Beverage</li>
+            <li>Changing Rooms</li>
+            <li>Cycling</li>
+            <li>Cycling</li>
+            <li>Group Fitness</li>
+            <li>Lockers</li>
+            <li>Lounge Area</li>
+            <li>Tatsujin Area</li>
+            <li>Water Dispenser</li>
+          </ul>
+        </div>
+        <div class="col-lg-6 text-lg-left">
+          <ul>
+            <li>Wifi</li>
+            <li>Steam Room</li>
+            <li>Cardio Area</li>
+            <li>Free Weights Area</li>
+            <li>Hot Yoga</li>
+            <li>Pilates</li>
+            <li>Playground</li>
+            <li>Purmotion</li>
+            <li>Sauna</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
-  <div id="clients"></div>
+  <div id="clients">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <h1>Clients</h1>
+          <p>We have trusted clients for about 5 years.</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div id="package"></div>
   <div id="register"></div>
   <div id="contact"></div>
