--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <title>Gym Sports</title>
 </head>
@@ -15,21 +16,21 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto text-uppercase d-flex justify-content-between w-50">
             <li class="nav-item">
               <a class="nav-link" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#register">Register</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#clients">Clients</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#package">Package</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#register">Register</a>
+              <a class="nav-link" href="#clients">Clients</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -48,8 +49,43 @@
       <a href="#register" class="btn-light">Register</a>
     </div>
   </div>
+  <div id="register" class="offset">
+    <div class="container py-5">
+      <div class="row">
+        <div class="col">
+          <h1 class="text-center">Register</h1>
+          <p class="text-center">Register yourself now, it's free.</p>
+          <form>
+            <div class="form-row">
+              <div class="form-group col-md-4">
+                <label for="fullname">Full Name</label>
+                <input type="name" name="fullname" class="form-control" minlength="4" required>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="gender">Gender</label>
+                <select name="gender" class="form-control" required>
+                  <option value="" selected disabled>Choose...</option>
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                </select>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="email">Email</label>
+                <input type="email" name="email" class="form-control" required>
+              </div>
+            </div>
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input">
+              <label class="form-check-label" for="check">All data is correct.</label>
+            </div>
+            <button type="submit" class="btn-primary-color">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <div id="features" class="offset">
-    <div class="container">
+    <div class="container-fluid bg-light py-5">
       <div class="row justify-content-center">
         <div class="col-auto text-center">
           <h1>Features</h1>
@@ -57,48 +93,69 @@
         </div>
       </div>
       <div class="row justify-content-lg-center">
-        <div class="col-lg-6 text-lg-right">
+        <div class="col-lg-2 text-lg-right">
           <ul>
-            <li>Beverage</li>
-            <li>Changing Rooms</li>
-            <li>Cycling</li>
-            <li>Cycling</li>
-            <li>Group Fitness</li>
-            <li>Lockers</li>
-            <li>Lounge Area</li>
-            <li>Tatsujin Area</li>
-            <li>Water Dispenser</li>
+            <a href=""><li>Beverage</li></a>
+            <a href=""><li>Changing Rooms</li></a>
+            <a href=""><li>Cycling</li></a>
+            <a href=""><li>Music</li></a>
+            <a href=""><li>Group Fitness</li></a>
+            <a href=""><li>Lockers</li></a>
+            <a href=""><li>Lounge Area</li></a>
+            <a href=""><li>Tatsujin Area</li></a>
+            <a href=""><li>Water Dispenser</li></a>
           </ul>
         </div>
-        <div class="col-lg-6 text-lg-left">
+        <div class="col-lg-2 text-lg-left">
           <ul>
-            <li>Wifi</li>
-            <li>Steam Room</li>
-            <li>Cardio Area</li>
-            <li>Free Weights Area</li>
-            <li>Hot Yoga</li>
-            <li>Pilates</li>
-            <li>Playground</li>
-            <li>Purmotion</li>
-            <li>Sauna</li>
+            <a href=""><li>Wifi</li></a>
+            <a href=""><li>Steam Room</li></a>
+            <a href=""><li>Cardio Area</li></a>
+            <a href=""><li>Free Weights Area</li></a>
+            <a href=""><li>Hot Yoga</li></a>
+            <a href=""><li>Pilates</li></a>
+            <a href=""><li>Playground</li></a>
+            <a href=""><li>Purmotion</li></a>
+            <a href=""><li>Sauna</li></a>
           </ul>
         </div>
       </div>
     </div>
   </div>
-  <div id="clients">
-    <div class="container">
+  <div id="package" class="offset">
+    <div class="container py-5">
       <div class="row justify-content-center">
-        <div class="col-auto">
+        <div class="col-auto text-center">
+          <h1>Package</h1>
+          <p>We have the best offer for those of you who want to join us.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="clients" class="offset">
+    <div class="container-fluid bg-info py-5">
+      <div class="row justify-content-center">
+        <div class="col-auto text-center">
           <h1>Clients</h1>
           <p>We have trusted clients for about 5 years.</p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4">
+          <i class="fa fa-user" aria-hidden="true"></i>
+        </div>
+      </div>
     </div>
   </div>
-  <div id="package"></div>
-  <div id="register"></div>
-  <div id="contact"></div>
+  <div id="contact" class="offset">
+    <div class="container-fluid bg-secondary py-5">
+      <div class="row justify-content-center">
+        <div class="col">
+          <a class="navbar-brand" href="#"><span>GYM</span> SPORTS</a>
+        </div>
+      </div>
+    </div>
+  </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
