--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto text-uppercase d-flex justify-content-between w-50">
+        <ul class="navbar-nav ml-auto text-uppercase d-flex justify-content-between">
             <li class="nav-item">
               <a class="nav-link" href="#home">Home</a>
             </li>
@@ -28,9 +28,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#package">Package</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#clients">Clients</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -86,55 +83,77 @@
     <div class="bg-light py-5">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-auto text-center mb-n4">
+          <div class="col-auto text-center">
             <h1>Facilities</h1>
             <p>We have the most complete gym facilities.</p>
           </div>
         </div>
         <div class="row simbol">
           <div class="col-6 mx-auto d-flex justify-content-center flex-wrap">
-            <div class="col text-center">
-              <i class="fa fa-address-card-o fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-address-card-o" aria-hidden="true"></i>
+              </span>
               <p>ID Card</p>
             </div>
-            <div class="col text-center">
-              <i class="fa fa-music fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-music" aria-hidden="true"></i>
+              </span>
               <p>Music</p>
             </div>
-            <div class="col text-center">
-              <i class="fa fa-umbrella fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-umbrella" aria-hidden="true"></i>
+              </span>
               <p>umbrella</p>
             </div>
-            <div class="col text-center">
-              <i class="fa fa-wifi fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-wifi" aria-hidden="true"></i>
+              </span>
               <p>wifi</p>
             </div>
-            <div class="col text-center">
-              <i class="fa fa-trash-o fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-trash-o" aria-hidden="true"></i>
+              </span>
               <p>trash</p>
             </div>
-            <div class="col text-center">
-              <i class="fa fa-motorcycle fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-motorcycle" aria-hidden="true"></i>
+              </span>
               <p>parking</p>
             </div>
-            <div class="col text-center">
-              <i class="fa fa-cutlery fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-cutlery" aria-hidden="true"></i>
+              </span>
               <p>canteen</p>
             </div>
-            <div class="col text-center">
-              <i class="fa fa-plug fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-plug" aria-hidden="true"></i>
+              </span>
               <p>plug</p>
             </div>
-            <div class="col text-center">
-              <i class="fa fa-medkit fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-medkit" aria-hidden="true"></i>
+              </span>
               <p>medkit</p>
             </div>
-            <div class="col text-center">
-              <i class="fa fa-television fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-television" aria-hidden="true"></i>
+              </span>
               <p>television</p>
             </div>
-            <div class="col text-center">
-              <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
+            <div class="col-3 text-center">
+              <span class="border-icon">
+                <i class="fa fa-bath" aria-hidden="true"></i>
+              </span>
               <p>toilet</p>
             </div>
           </div>
@@ -193,26 +212,84 @@
       </div>
     </div>
   </div>
-  <div id="clients" class="offset">
-    <div class="container-fluid bg-info py-5">
-      <div class="row justify-content-center">
-        <div class="col-auto text-center">
-          <h1>Clients</h1>
-          <p>We have trusted clients for about 2 years.</p>
+  <div id="contact" class="offset">
+    <div class="bg-light py-5">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-auto text-center">
+            <h1>Contact</h1>
+            <p>If you have questions, you can contact us or you can come directly to the place.</p>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <i class="fa fa-user" aria-hidden="true"></i>
+
+        <div class="row">
+          <div class="row mark-contact">
+            <div class="col">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </div>
+            <div class="col">
+              <p>Facebook</p>
+              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
+            </div>
+          </div>
+          <div class="row mark-contact">
+            <div class="col">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </div>
+            <div class="col">
+              <p>Twitter</p>
+              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
+            </div>
+          </div>
+          <div class="row mark-contact">
+            <div class="col">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </div>
+            <div class="col">
+              <p>Instagram</p>
+              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
+            </div>
+          </div>
+          <div class="row mark-contact">
+            <div class="col">
+              <i class="fa fa-envelope-o" aria-hidden="true"></i>
+            </div>
+            <div class="col">
+              <p>Email</p>
+              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
+            </div>
+          </div>
+          <div class="row mark-contact">
+            <div class="col">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+            </div>
+            <div class="col">
+              <p>Phone</p>
+              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
+            </div>
+          </div>
+          <div class="row mark-contact">
+            <div class="col">
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
+            </div>
+            <div class="col">
+              <p>Map</p>
+              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
+            </div>
+          </div>
         </div>
-      </div>
+
+
+        
+        
     </div>
   </div>
-  <div id="contact" class="offset">
-    <div class="container-fluid bg-secondary py-5">
-      <div class="row justify-content-center">
-        <div class="col">
+  <div id="footer">
+    <div class="container-fluid bg-secondary py-1">
+      <div class="row">
+        <div class="col d-flex justify-content-between align-items-center">
           <a class="navbar-brand" href="#"><span>GYM</span> SPORTS</a>
+          <p class="m-0">&copy; 2020 <a href="">Gym Sports</a> | Made with ❤️ by <a href="">Fauzi Galih Aji Saputro</a></p>
         </div>
       </div>
     </div>
