--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="row simbol">
-          <div class="col-6 mx-auto d-flex justify-content-center flex-wrap">
+          <div class="col-md-6 mx-auto d-flex justify-content-center flex-wrap">
             <div class="col-3 text-center">
               <span class="border-icon">
                 <i class="fa fa-address-card-o" aria-hidden="true"></i>
@@ -221,75 +221,78 @@
             <p>If you have questions, you can contact us or you can come directly to the place.</p>
           </div>
         </div>
-
-        <div class="row">
-          <div class="row mark-contact">
-            <div class="col">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </div>
-            <div class="col">
-              <p>Facebook</p>
-              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
-            </div>
+        <div class="row mark-contact">
+          <div class="icon">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
           </div>
-          <div class="row mark-contact">
-            <div class="col">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </div>
-            <div class="col">
-              <p>Twitter</p>
-              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
-            </div>
-          </div>
-          <div class="row mark-contact">
-            <div class="col">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
-            </div>
-            <div class="col">
-              <p>Instagram</p>
-              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
-            </div>
-          </div>
-          <div class="row mark-contact">
-            <div class="col">
-              <i class="fa fa-envelope-o" aria-hidden="true"></i>
-            </div>
-            <div class="col">
-              <p>Email</p>
-              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
-            </div>
-          </div>
-          <div class="row mark-contact">
-            <div class="col">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-            </div>
-            <div class="col">
-              <p>Phone</p>
-              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
-            </div>
-          </div>
-          <div class="row mark-contact">
-            <div class="col">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-            </div>
-            <div class="col">
-              <p>Map</p>
-              <a href="">https://getbootstrap.com/docs/4.5/utilities/text/</a>
-            </div>
+          <div class="link">
+            <p>Facebook</p>
+            <a href="">https://facebook.com</a>
           </div>
         </div>
-
-
-        
-        
+        <div class="row mark-contact">
+          <div class="icon">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+          </div>
+          <div class="link">
+            <p>Twitter</p>
+            <a href="">https://twitter.com</a>
+          </div>
+        </div>
+        <div class="row mark-contact">
+          <div class="icon">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+          </div>
+          <div class="link">
+            <p>Instagram</p>
+            <a href="">https://instagram.com</a>
+          </div>
+        </div>
+        <div class="row mark-contact">
+          <div class="icon">
+            <i class="fa fa-envelope-o" aria-hidden="true"></i>
+          </div>
+          <div class="link">
+            <p>Email</p>
+            <a href="">https://email.com</a>
+          </div>
+        </div>
+        <div class="row mark-contact">
+          <div class="icon">
+            <i class="fa fa-whatsapp" aria-hidden="true"></i>
+          </div>
+          <div class="link">
+            <p>Whatsapp</p>
+            <a href="">+1 9999 9999</a>
+          </div>
+        </div>
+        <div class="row mark-contact">
+          <div class="icon">
+            <i class="fa fa-phone" aria-hidden="true"></i>
+          </div>
+          <div class="link">
+            <p>Phone</p>
+            <a href="">021 9999 9999</a>
+          </div>
+        </div>
+        <div class="row mark-contact">
+          <div class="icon">
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
+          </div>
+          <div class="link">
+            <p>Map</p>
+            <a href="">https://maps.com</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div id="footer">
     <div class="container-fluid bg-secondary py-1">
       <div class="row">
-        <div class="col d-flex justify-content-between align-items-center">
-          <a class="navbar-brand" href="#"><span>GYM</span> SPORTS</a>
-          <p class="m-0">&copy; 2020 <a href="">Gym Sports</a> | Made with ❤️ by <a href="">Fauzi Galih Aji Saputro</a></p>
+        <div class="col d-flex justify-content-md-between align-items-md-center">
+          <a class="navbar-brand hidden-md" href="#"><span>GYM</span> SPORTS</a>
+          <p class="my-0">&copy; 2020 <a href="">Gym Sports</a> | Made with ❤️ by <a href="">Fauzi Galih Aji Saputro</a></p>
         </div>
       </div>
     </div>
